--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,1 +1,49 @@
 // Here you can add other styles
+.shadowi{
+    text-shadow: "3px 5px 7px #9E9E9E"
+}
+svg{
+    pointer-events: none;
+}
+div.imagu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    overflow: auto;
+    background-image : url(https://ssm2.insw.go.id/static/media/home.b39d3c4c.jpeg);
+    background-repeat: no-repeat;
+    background-size:cover;
+    }
+    div.item {
+        display: inline-block;
+        text-align: center;
+    } 
+    div.borderleft {
+        border-right:1px solid rgba(167, 135, 135, 0.267)
+    }  
+    div.juos {
+        display:inline-block
+    }  
+div.jiss {
+    width: 10px;
+}
+.joss thead tr {
+    background-color: #02265d;
+    color:#f5f7fa
+} 
+.p-0 td div div table thead {
+    background-color: #02265d;
+    color:#f5f7fa    
+}
+.joss tbody tr {
+    background-color: rgba(62, 62, 63, 0.055);
+}  
+.josss thead tr {
+    background-color: #02265d;
+    color:#f5f7fa
+} 
+.josss tbody tr {
+    background-color: rgba(62, 62, 63, 0.055);
+}          
